<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardBackgroundColor="@color/colorPrimaryDark"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            tools:src="@android:color/darker_gray"
            android:contentDescription="TODO" />

        <LinearLayout
            android:id="@+id/rv_linear"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/img_item_photo"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_restaurant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                tools:text="@string/namarestoran" />

            <TextView
                android:id="@+id/tv_range"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textSize="14sp"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                tools:text="@string/rangeharga" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="77dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="30dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="130dp"
                android:layout_marginBottom="3dp"
                android:text="@string/rating"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                tools:ignore="RtlCompat" />

            <RatingBar
                style="?android:attr/ratingBarStyleSmall"
                android:id="@+id/rt_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="80dp"
                android:layout_marginTop="-21dp"
                android:layout_marginEnd="5dp"
                android:numStars="5"
                android:rating="4"
                android:stepSize="0.5"
                android:scaleX="1"
                android:scaleY="1"
                android:transformPivotX="0dp"
                android:transformPivotY="0dp"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/totalrt"
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginStart="100dp"
                android:layout_marginTop="-19dp"
                android:layout_marginEnd="5dp"
                android:text="@string/totalrt"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Klik"
                tools:ignore="RtlHardcoded"
                android:textColor="@android:color/white"/>

        </LinearLayout>

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="-5dp"
            android:layout_marginStart="335dp"
            android:checked="true"/>

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textSize="8sp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="335dp"
            tools:ignore="SmallSp" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>