<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryDark"
    tools:context=".Model.DetailResto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/resto_name"
            style="@style/TextContent.Small.White"
            android:layout_gravity="left"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:background="#C0BB86FC"
            android:drawablePadding="4dp"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/namarestoran"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@android:color/white" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_below="@+id/detail_toolbar"
            android:background="@color/colorPrimaryDark">

            <ImageView
                android:id="@+id/detail_food_img"
                android:layout_width="385dp"
                android:layout_height="200dp"
                android:layout_margin="12dp"
                android:adjustViewBounds="true"
                android:background="@color/colorSubtitle2"
                android:scaleType="centerCrop">
            </ImageView>

            <TextView
                android:id="@+id/detail_link"
                style="@style/TextContent.Small.White"
                android:layout_gravity="bottom"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:background="#4D000000"
                android:drawableStart="@drawable/ic_collections_white_18dp"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:maxLength="10"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/more_photos"
                android:textColor="@android:color/white" />

        </FrameLayout>

        <RelativeLayout
            android:layout_width="235dp"
            android:layout_height="70dp"
            android:layout_marginRight="200dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/shape2"
            android:layout_marginBottom="7dp">
            <TextView
                android:id="@+id/rangeharga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/rangeharga"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="DuplicateIds" >
            </TextView>
            <TextView
                android:id="@+id/bukatoko"
                style="@style/TextContent.Small.White"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rangeharga"
                android:layout_marginEnd="15dp"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/open"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="DuplicateIds,RtlCompat" >
            </TextView>

        </RelativeLayout>
        <FrameLayout
            android:layout_width="235dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/shape2"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/alamat"
                style="@style/TextContent.Small.White"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/bukatoko"
                android:layout_marginEnd="15dp"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/address"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="DuplicateIds,RtlCompat" >
            </TextView>
        </FrameLayout>
        <FrameLayout
            android:layout_width="150dp"
            android:layout_height="136dp"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:layout_marginTop="-142dp"
            android:background="@drawable/shape"
            android:layout_marginBottom="5dp">
            <TextView
                android:id="@+id/sumbintang"
                style="@style/TextContent.Small.White"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:gravity="center_vertical"
                android:text="@string/rating"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="35sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat">
            </TextView>
            <RatingBar
                android:id="@+id/ratingbar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="40dp"
                android:isIndicator="true"
                android:numStars="5"
                android:rating="4"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:transformPivotX="0dp"
                android:transformPivotY="0dp">
            </RatingBar>
            <TextView
                android:id="@+id/review"
                style="@style/TextContent.Small.White"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="20dp"
                android:layout_marginTop="90dp"
                android:layout_marginEnd="15dp"
                android:gravity="center_vertical"
                android:text="@string/totalrt"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="RtlCompat">
            </TextView>
        </FrameLayout>

        <FrameLayout
                android:id="@+id/mapView2"
                android:layout_width="match_parent"
                android:background="@drawable/shape"
                android:layout_margin="10dp"
                android:layout_height="125dp"/>

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

        <TextView
            android:id="@+id/Labelkomen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:text="@string/labelKomen"
            android:textColor="@android:color/white"
            android:textStyle="bold">
        </TextView>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RestoranRev"
            android:layout_below="@+id/Labelkomen"
            android:layout_width="match_parent"
            android:layout_height="173dp"
            android:layout_marginTop="5dp"
            tools:listitem="@layout/item_review" >
        </androidx.recyclerview.widget.RecyclerView>

        </RelativeLayout>
    </LinearLayout>
</ScrollView>